# musllibc

./: .gitignore  .licenseignore  CMakeLists.txt  Findmusllibc.cmake  Kbuild  Kconfig  Makefile  Makefile.muslc  benchmark_symbols.py  benchmarks.nix  build.nix  config.mak  configure  configure_line  default.nix  flamegraphs.nix  musl.nix  overlay.nix  patch_executable.nix
arch/aarch64/bits/: syscall.h.in
arch/aarch64_sel4/: atomic.h  atomic_arch.h  bits  crt_arch.h  pthread_arch.h  reloc.h
arch/arm/: atomic.h  pthread_arch.h
arch/arm_sel4/: atomic.h  atomic_arch.h  bits  crt_arch.h  pthread_arch.h  reloc.h  src  syscall_arch.h
arch/arm_sel4/src/: __aeabi_atexit.c  __aeabi_memclr.c  __aeabi_memcpy.c  __aeabi_memmove.c  __aeabi_memset.c  __set_thread_area.c  arm_sel4  atomics.c  find_exidx.c
arch/i386_sel4/: atomic.h  atomic_arch.h  bits  crt_arch.h  pthread_arch.h  reloc.h  syscall_arch.h
arch/i386_sel4/bits/: alltypes.h.in  endian.h  errno.h  fcntl.h  fenv.h  float.h  ioctl.h  ipc.h  limits.h  mman.h  msg.h  poll.h  posix.h  reg.h  resource.h  sem.h  setjmp.h  shm.h  signal.h  socket.h  stat.h  statfs.h  stdarg.h  stdint.h  syscall.h  termios.h  user.h
arch/riscv/: atomic.h  atomic_arch.h  crt_arch.h  pthread_arch.h  reloc.h  syscall_arch.h
arch/riscv/bits/: alltypes.h.in  fcntl.h  limits.h  reg.h  signal.h  stdint.h
arch/x86_64/: pthread_arch.h
arch/x86_64_sel4/: atomic.h  atomic_arch.h  bits  crt_arch.h  ksigaction.h  pthread_arch.h  reloc.h  syscall_arch.h
arch/x86_64_sel4/bits/: alltypes.h.in  endian.h  errno.h  fcntl.h  fenv.h  float.h  ioctl.h  ipc.h  limits.h  mman.h  msg.h  poll.h  posix.h  reg.h  resource.h  sem.h  setjmp.h  shm.h  signal.h  socket.h  stat.h  statfs.h  stdarg.h  stdint.h  syscall.h  termios.h  user.h
crt/: riscv_sel4
crt/riscv/: crti.s  crtn.s
examples/: Makefile  README.md  default.nix  foo.c  hello_world  hello_world.c  number_of_functions.py  read_relo_cache  read_relo_cache.cpp
examples/benchmark-many-files/: Makefile
examples/benchmark-many-files-dynamic/: Makefile  default.nix  generate_sources.py
examples/benchmark-many-files-static/: generate_heatmap.py  generate_sources.sh
examples/benchmark-many-functions/: default.nix  number_of_functions.py
examples/hello-world/: Makefile  default.nix  foo.c  hello_world.c
examples/read_relo_cache/: Makefile  default.nix  read_relo_cache.cpp
include/: byteswap.h  endian.h  errno.h
ldso/: dynlink.c
patches/arch/arm/: syscall_arch.h
patches/arch/riscv32/: syscall_arch.h
patches/arch/riscv64/: syscall_arch.h
src/aio/: lio_listio.c
src/env/: __init_tls.c
src/errno/: __errno_location.c  strerror.c
src/internal/: pthread_impl.h
src/internal/aarch64_sel4/: syscall.s
src/internal/arm_sel4/: syscall.s
src/internal/i386_sel4/: syscall.s
src/internal/riscv/: syscall.s
src/internal/x86_64_sel4/: syscall.s
src/ldso/riscv/: dlsym.s  start.s
src/malloc/: malloc.c  memalign.c
src/regex/: tre.h
src/setjmp/: arm_sel4
src/setjmp/arm/: longjmp.S  setjmp.S
src/setjmp/riscv/: longjmp.s  setjmp.s
src/signal/riscv/: sigsetjmp.s
src/stdio/: vfprintf.c  vfwscanf.c
src/stdlib/: wcstod.c  wcstol.c
src/thread/: __set_thread_area.c
src/thread/aarch64_sel4/: __set_thread_area.s
src/thread/arm_sel4/: __aeabi_read_tp.s  __aeabi_read_tp_c.c  __set_thread_area.c  atomics.s
src/thread/riscv/: __set_thread_area.s  __unmapself.s  clone.s  syscall_cp.s
tools/: add-cfi.i386_sel4.awk  add-cfi.x86_64_sel4.awk  mkalltypes
